# activitykeeper

./: .gitignore  CMakeLists.txt  README.md  confighandler.cpp  confighandler.h  cursormover.pro  icon.qrc  main.cpp  maindialog.cpp  maindialog.h  mousemover.cpp  mousemover.h  systemtrayicon.cpp  windeployqt.cmake
.github/workflows/: main.yml
if/: iconfighandler.h  iconfigstorage.h  iconfigwriter.h  imousehandler.h  imousemover.h
inc/: appguimanager.h  binfilehandler.h  config.h  confighandler.h  configstorage.h  configwriter.h  maindialog.h  mousehandler.h  mousemover.h  systemtrayicon.h
rsc/: app_icon.rc
src/: appguimanager.cpp  binfilehandler.cpp  confighandler.cpp  configstorage.cpp  configwriter.cpp  main.cpp  maindialog.cpp  mousehandler.cpp  mousemover.cpp  systemtrayicon.cpp
